<resources>
    <string name="app_name">Qurané Mp3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">op</string>
    <string name="close">cl</string>
    <string name="coranmp3">CoranMp3</string>
    <string name="livre">Livre</string>
    <string name="title_activity_read">ReadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bool_reader">BoolReader</string>
    <string name="coran">Coran</string>
    <string name="audio">Audio</string>
    <string name="propos">À Propos</string>
    <string name="apps">Apps</string>
    <string name="instagram">Instagram</string>
    <string name="partager">Partager</string>
    <string name="noir">Noir</string>
    <string name="blanc">Blanc</string>
    <string name="marron">Marron</string>
    <string name="derni_re_lecture">Dernière Lecture</string>
    <string name="couleur">Couleur</string>
    <string name="sourate">Sourate</string>
    <string name="gris">Gris</string>
</resources>